fix mobile spacing on main title

--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -2,6 +2,7 @@
   background-color: #222d3e;
   background-repeat: no-repeat; 
   background-size: cover;
+  background-attachment: fixed;
   height: 100vh;
   width: 100vw;
 }
@@ -215,6 +216,7 @@
   position: absolute;
   bottom: 0;
   margin-left: 1rem;
+  margin-bottom: .5rem;
 }
 
 .title-socials a {
@@ -685,12 +687,14 @@
   .main-heading {
     margin-left: 1.5rem;
     padding-right: 5rem;
-    font-size: 4.7rem;
+    font-size: 4.2rem;
   }
 
   .title {
     margin-left: 1.5rem;
-    font-size: 2rem; 
+    font-size: 2rem;
+    padding-bottom: .5rem;
+    padding-top: .5rem; 
   }
 
   .pdf-button {
